test/trivial/bradc/protoast/badred.good
badred.chpl:13 ERROR: syntax error
yytext is: reduce
